part1/02-Project-v0.1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crudproject
  template:
    metadata:
      labels:
        app: crudproject
    spec:
      containers:
        - name: crudproject
          image: jb1r/project:v03
