part1/02-Project-v0.1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-srv
spec:
  type: ClusterIP
  selector:
    app: crudproject # This is the app as declared in the deployment.
  ports:
    - port: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      targetPort: 3000 # This is the target port
